fix background asynctask initiation when widget is not running, clean codes, change app name